# enki

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  SPEC.md  deny.toml  lefthook.yml
.github/workflows/: ci.yml  publish.yml
examples/: eval.rs  graph_demo.rs  ingest_campagne.rs  ingest_srd_spells.rs  qdrant_smoke.rs  query.rs  retrieval_eval.rs
examples/ressources/dnd/: eval_questions.json
examples/ressources/dnd/books/FR_SRD_CC_v5_2_1/: page_000.anchors.json  page_000.md  page_001.anchors.json  page_001.md  page_002.anchors.json  page_002.md  page_003.anchors.json  page_003.md  page_004.anchors.json  page_004.md  page_005.anchors.json  page_005.md  page_006.anchors.json  page_006.md  page_007.anchors.json  page_007.md  page_008.anchors.json  page_008.md  page_009.anchors.json  page_009.md  page_010.anchors.json  page_010.md  page_011.anchors.json  page_011.md  page_012.anchors.json  page_012.md  page_013.anchors.json  page_013.md  page_014.anchors.json  page_014.md  page_015.anchors.json  page_015.md  page_016.anchors.json  page_016.md  page_017.anchors.json  page_017.md  page_018.anchors.json  page_018.md  page_019.anchors.json  page_019.md  (+720 more)
examples/ressources/dnd/campagne/factions/: lordre_du_voile.md
examples/ressources/dnd/campagne/locations/: taverne_du_griffon_dore.md
examples/ressources/dnd/campagne/objects/: lame_lunaire.md
examples/ressources/dnd/campagne/pj/: lyra_moonwhisper.md  thorgrim_barbe_de_fer.md
examples/ressources/dnd/campagne/pnj/: dame_seraphine.md
examples/ressources/dnd/campagne/quests/: la_faille_du_voile.md
examples/ressources/dnd/campagne/rules/: regles_maison.md
src/: config.rs  embed.rs  indexing.rs  lexical.rs  lib.rs  library.rs  main.rs  model.rs  prompt.rs  providers.rs  qdrant.rs  registry.rs  rerank.rs  retrieval.rs  search.rs  sparse.rs  telemetry.rs
src/agent/: answer.rs  citations.rs  gather.rs  mod.rs  tools.rs
src/graph/: local.rs  mod.rs
src/store/: chunk.rs  local.rs  mod.rs  vector.rs
